<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialog_cont">Fortsätt</string>
    <string name="dialog_retry">Starta om</string>
    <string name="dialog_quit">Avsluta</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nej</string>

    <string-array
        name="quit_quiz_modal">
        <item>@string/dialog_cont</item>
        <item>@string/dialog_retry</item>
        <item>@string/dialog_quit</item>
    </string-array>
    <string-array
        name="quit_app_modal">
        <item>@string/dialog_yes</item>
        <item>@string/dialog_no</item>
    </string-array>
    <string-array name="gamemodes">
        <item>@string/gamemode_standard</item>
        <item>@string/gamemode_lives</item>
        <item>@string/gamemode_time</item>
    </string-array>
</resources>
